ctdb-takeover: Known and available IP lists should be the same size as nodemap

BUG: https://bugzilla.samba.org/show_bug.cgi?id=12511

Signed-off-by: Amitay Isaacs <amitay@gmail.com>
Reviewed-by: Martin Schwenke <martin@meltin.net>
(cherry picked from commit b7cfac778e8813b22d29859102bab1598cdb5ff0)